# template-cpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_sample.cpp
